client/style.css
/* Yun css */

.page{
    height: 100%;
    width: 100%;
}

.main-button{
    padding: 10px;
    border-radius: 50%;
    border: 10px solid #9F40FF;
    background-color: #c790ff;
    height: 450px;
    width: 450px;
    margin-left: 4%;
    margin-right: 4%;
}

.main-button-text{
    color: white;
    font-size: 3em;
    font-weight: 500;
}

.sub-button{
    padding: 10px;
    border-radius: 50%;
    border: 5px solid #c04ee5;
    background-color: #d891ef;
    height: 150px;
    width: 150px;
    margin-left: 32px;
    margin-right: 32px;
}

.button-image{
    height: 60%;
    width: 60%;
}

.toolbar-textbox{
    width: 50%;
    font-size: 1.5em;
    font-weight: 700;
    color: #c790ff;
}

.center-card{
    width: 30%;
    margin: 25%;
    margin-left: 35%;
    margin-right: 35%;
}

#login-container{
    width: 100%;
    height: 100%;
    background-color: red;
}

#toolbar{
    min-height: 128px;
    padding-top: 10px;
    margin-top: 0.5%;
}

#toolbar-logo{
    width: 96px;
    height: 96px;
}

#toolbar-logo-button{
    width: 96px;
    height: 96px;
    margin: 0px;
    padding: 0px;
    border-width: 5px;
}

#avatar-image{
    width: 32px;
    height: 32px;
    padding-right: 5px;
}

#page-content{
    min-height: 768px;
}

#toolbar-divider{
    margin-top: 0.5%;
    margin-bottom: 1%;
    width: 90%; 
    border: 1px solid #9F40FF;
}

#logo-text-placeholder{
    color: white;
    font-weight: 500;
}

#login-text{
    font-weight: 500;
}

#login-buffer{
    min-width: 2%;
}

#main-button-row{
    margin-top: 1%;
}

#sub-button-row{
    margin-top: 2%;
}

#text-row{
    margin-top: 1%;
}


/* Erin css */

.add-pic-btn {
    padding: 10px;
    border-radius: 50%;
    border: 3px solid #c04ee5;
    background-color: #d891ef;
    margin-left: auto;
    margin-right: auto;
}
#add-pic-sub-button {
    height: 50px;
    width: 50px;
}

#add-habit-sub-button {
    height: 50px;
    width: 50px;
}

.add-habit-btn {
    padding: 10px;
    border-radius: 50%;
    border: 3px solid #c04ee5;
    background-color: #d891ef;
    margin-left: auto;
    margin-right: auto;
}

.btn-light{
    background-color: #d891ef;
    color: white;
}

.btn-light:hover {
    background-color: #c04ee5;
    color: white;
}

#habits-date {
    color: white;
    font: italic;
}

#habits-list {
    margin-left: 20px;
    color: white;
}


#image-row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
}

#image-col-1 {
    flex: 25%;
    max-width: 25%;
    padding: 0 4px;
}

.col img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

#habits-month {
    font-size: 50px;
    font-weight: bold;
    font-style: italic;
    color:blueviolet;
}

#habit-label {
    font-size: 25px;
    color:blueviolet;
    margin-left: 40px;
    margin-top: 20px;;
    margin-bottom: 20px;
}

.grid-container {
    display: inline-grid;
    grid-column-gap: 2px;
}


.grid {
    display: grid;
    grid-auto-flow: column;
    margin-top: 26px;
    background-color:lightgray;
    color:lightgray;
}

.day {
    border: 2px solid black;
}

#habit-card {
    background-color: mediumpurple;
}

/* Swarathmika CSS */

.photo-image {
    display: block;
    height: 5%;
    width: 5%;
    margin-left: auto;
    margin-right: auto;
}

/* Picture Page CSS */
.container.gallery-container {
    background-color: #fff;
    color: #35373a;
    min-height: 100vh;
    padding: 30px 50px;
}


#gallery-row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
  }

/* Four equal columns next to each other */
#gallery-column {
    flex: 25%;
    max-width: 25%;
    padding: 0 4px;
}

#gallery-column img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

@media screen and (max-width: 800px) {
    #gallery-column {
      flex: 50%;
      max-width: 50%;
    }
}

@media screen and (max-width: 600px) {
    #gallery-column {
      flex: 100%;
      max-width: 100%;
    }
}

.baguetteBox-button {
    background-color: transparent !important;
}

#add-habit-card {
    background-color: beige;
}

#add-pic-card {
    background-color: beige;
}

.upload-drop-box {
    height: 200px;
    border-width: 2px;
    margin-bottom: 20px;
    color: #ccc;
    border-style: dashed;
    border-color: #ccc;
    line-height: 200px;
    text-align: center
}

.upload-drop-box.drop {
    color: #222;
    border-color: #222;
}

